--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -19,12 +19,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/admin/">全栈营 Rails Recipes 後台</a>
+          <a class="navbar-brand" href="/admin/"><%= t("admin.navbar.brand") %></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <% if current_user %>
-              <li class="active"><%= link_to('活動管理', admin_events_path) %></li>
+              <li class="active"><%= link_to(t("admin.navbar.events"), admin_events_path) %></li>
             <% end %>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -32,17 +32,22 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   <span class="glyphicon glyphicon-user"></span>
-                  <%= t("hello", :name => current_user.display_name) %> 
+                  <%= t("hello", :name => current_user.display_name) %>
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "回到前台", root_path %></li>
-                  <li><%= link_to('修改密碼', edit_registration_path(:user)) %></li>
-                  <li><%= link_to('登出', destroy_user_session_path, :method => :delete) %></li>
+                  <% if I18n.locale == "zh-CN".to_sym %>
+                    <li><%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %></li>
+                  <% else %>
+                    <li><%= link_to "中文", :controller => controller_name, :action => action_name, :locale => "zh-CN" %></li>
+                  <% end %>
+                  <li><%= link_to t("navbar.console"), root_path %></li>
+                  <li><%= link_to(t("navbar.reset_password"), edit_registration_path(:user)) %></li>
+                  <li><%= link_to(t("navbar.sign_out"), destroy_user_session_path, :method => :delete) %></li>
                 </ul>
               </li>
             <% else %>
-              <li><%= link_to('註冊', new_registration_path(:user)) %></li>
-              <li><%= link_to('登入', new_session_path(:user)) %></li>
+              <li><%= link_to(t("navbar.sign_up"), new_registration_path(:user)) %></li>
+              <li><%= link_to(t("navbar.sign_in"), new_session_path(:user)) %></li>
             <% end %>
           </ul>
         </div><!--/.nav-collapse -->
