--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">全栈营 Rails Recipes 前台</a>
+            <a class="navbar-brand" href="/"><%= t("navbar.brand") %></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><%= link_to "活動一覽", events_path %></li>
+              <li class="active"><%= link_to t("navbar.events"), events_path %></li>
             </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
@@ -37,14 +37,19 @@
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to('管理員面板', admin_events_path) %></li>
-                  <li><%= link_to('修改密碼', edit_registration_path(:user)) %></li>
-                  <li><%= link_to('登出', destroy_user_session_path, :method => :delete) %></li>
+                  <% if I18n.locale == "zh-CN".to_sym %>
+                    <li><%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %></li>
+                  <% else %>
+                    <li><%= link_to "中文", :controller => controller_name, :action => action_name, :locale => "zh-CN" %></li>
+                  <% end %>
+                  <li><%= link_to(t("admin.navbar.console"), admin_events_path) %></li>
+                  <li><%= link_to(t("navbar.reset_password"), edit_registration_path(:user)) %></li>
+                  <li><%= link_to(t("navbar.sign_out"), destroy_user_session_path, :method => :delete) %></li>
                 </ul>
               </li>
             <% else %>
-              <li><%= link_to('註冊', new_registration_path(:user)) %></li>
-              <li><%= link_to('登入', new_session_path(:user)) %></li>
+              <li><%= link_to(t("navbar.sign_up"), new_registration_path(:user)) %></li>
+              <li><%= link_to(t("navbar.sign_in"), new_session_path(:user)) %></li>
             <% end %>
           </ul>
           </div><!--/.nav-collapse -->
@@ -58,7 +63,7 @@
       <%= yield %>
 
       <%= link_to "FAQ", faq_path %>
-      
+
       <%= link_to "中文版", :controller => controller_name, :action => action_name, :locale => "zh-CN" %>
       <%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %>
 
