--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t("event_list") %></h1>
 
-<table class="table">
+<table class="table table-hover">
   <tbody>
     <% @events.each do |event| %>
     <tr>
@@ -8,7 +8,7 @@
         <%= link_to event.name, event_path(event) %>
       </td>
       <td>
-        <%= event.created_at %>
+        <%= event.created_at.strftime("%Y/%m/%d %I:%M %p") %>
       </td>
     </tr>
     <% end %>
