--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t("admin.event_list") %></h1>  
+<h1><%= t("admin.event_list") %></h1>
 
 <p class="text-right">
 <%= link_to "New Event", new_admin_event_path, :class => "btn btn-primary" %>
@@ -7,11 +7,13 @@
 <table class="table">
 <tr>
   <th>Event Name</th>
+  <th>Category</th>
   <th>Actions</th>
 </tr>
 <% @events.each do |event| %>
   <tr>
     <td><%= link_to event.name, admin_event_path(event) %></td>
+    <td><%= event.category.try(:name) %></td>
     <td>
       <%= link_to "Edit", edit_admin_event_path(event), :class => "btn btn-default" %>
       <%= link_to "Delete", admin_event_path(event), :method => "delete", :data => { :confirm => "Are you sure?" }, :class => "btn btn-danger" %>
