install select2-rails

--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -43,3 +43,7 @@
   <%= f.label :description %>
   <%= f.text_area :description, :class => "form-control" %>
 </div>
+
+<script type="text/javascript">
+  $("#event_category_id").select2( { theme: "bootstrap" } );
+</script>
