--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -23,9 +23,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <% if current_user %>
-              <li class="active"><%= link_to(t("admin.navbar.events"), admin_events_path) %></li>
-            <% end %>
+            <li class="<%= ( current_page?(admin_events_path) )? 'active' : '' %>"><%= link_to(t("admin.navbar.events"), admin_events_path) %></li>
+            <li class="<%= ( current_page?(admin_users_path) )? 'active' : '' %>"><%= link_to(t("admin.navbar.users"), admin_users_path) %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
