--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><%= link_to t("navbar.events"), events_path %></li>
+              <li class="<%= ( current_page?(events_path) )? 'active' : '' %>"><%= link_to t("navbar.events"), events_path %></li>
             </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
