--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -44,7 +44,7 @@
   <%= f.text_area :description, :class => "form-control" %>
 </div>
 
-<%= f.fields_for :tickets do |ff| %>
+<%= f.nested_fields_for :tickets do |ff| %>
   <fieldset style="border-left: 5px solid #bbb; margin-bottom: 10px; padding: 10px;">
     <legend>Ticket</legend>
     <div class="form-group">
@@ -62,7 +62,11 @@
       <%= ff.text_area :description, :class => "form-control" %>
     </div>
   </fieldset>
+  <%= ff.remove_nested_fields_link "移除这个票种", :class => "btn btn-danger" %>
 <% end %>
+<p class="text-right">
+  <%= f.add_nested_fields_link :tickets, "新增票种", :class => "btn btn-default" %>
+</p>
 
 <script type="text/javascript">
   $("#event_category_id").select2( { theme: "bootstrap" } );
