implement tickets#CRUD

--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -17,6 +17,7 @@
     <td><%= t(event.status, :scope => "event.status") %></td>
     <td><%= event.category.try(:name) %></td>
     <td>
+      <%= link_to "Tickets", admin_event_tickets_path(event), :class => "btn btn-default" %>
       <%= link_to "Edit", edit_admin_event_path(event), :class => "btn btn-default" %>
       <%= link_to "Delete", admin_event_path(event), :method => "delete", :data => { :confirm => "Are you sure?" }, :class => "btn btn-danger" %>
   </tr>
