--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -4,4 +4,8 @@
   <%= link_to "打開前台", event_path(@event), :target => "_blank", :class => "btn btn-primary" %>
 </p>
 
-<%= simple_format @event.description %>
+<%= sanitize @event.description %>
+
+<!-- <%= raw @event.description %> -->
+
+<!-- <%= @event.description.html_safe %> -->
