--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -54,12 +54,16 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="padding-top: 60px;">
 
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <% if notice %>
+        <p class="alert alert-success"><%= notice %></p>
+      <% end %>
 
-
+      <% if alert %>
+        <p class="alert alert-danger"><%= alert %></p>
+      <% end %>
+      
       <%= yield %>
     </div>
   </body>
