--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -56,14 +56,8 @@
 
     <div class="container" style="padding-top: 60px;">
 
-      <% if notice %>
-        <p class="alert alert-success"><%= notice %></p>
-      <% end %>
+      <%= render "common/flashed" %>
 
-      <% if alert %>
-        <p class="alert alert-danger"><%= alert %></p>
-      <% end %>
-      
       <%= yield %>
     </div>
   </body>
