implement registrations#step1/update_step1

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
         </div><!--/.container-fluid -->
       </nav>
 
-      <%= render "common/flashed" %>
+      <%= render "common/flashes" %>
 
       <%= yield %>
 
