--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -16,3 +16,5 @@
   <dt>自我介绍</dt>
   <dd><%= simple_format @registration.bio %></dd>
 </dl>
+
+<p><%= link_to "Edit", step1_event_registration_path(@event, @registration), :class => "btn btn-primary" %></p>
