--- a/app/views/registrations/step3.html.erb
+++ b/app/views/registrations/step3.html.erb
@@ -15,7 +15,8 @@
   </div>
 
   <div class="form-group">
+    <%= link_to "Previous", step2_event_registration_path(@event, @registration), :class => "btn btn-default" %>
     <%= f.submit "Submit", :class => "btn btn-primary" %>
   </div>
-  
+
 <% end %>
