--- a/app/views/registrations/step2.html.erb
+++ b/app/views/registrations/step2.html.erb
@@ -2,29 +2,34 @@
 
 <h2>Step 2</h2>
 
-<% if @registration.errors.any? %>
-  <ul>
-    <% @registration.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
 <%= form_for @registration, :url => update_step2_event_registration_path(@event, @registration) do |f| %>
 
-  <div class="form-group">
-    <%= f.label :name %>
+  <div class="form-group <%= f.object.errors[:name].any?? "has-error" : "" %>">
+    <!-- NOTE 出错时，control-label 可以使label文字变红 -->
+    <%= f.label :name, :class => "control-label" %>
     <%= f.text_field :name, :class => "form-control" %>
+
+    <% if f.object.errors[:name] %>
+      <span class="help-block"><%= safe_join(f.object.errors[:name], "、") %></span>
+    <% end %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :email %>
+  <div class="form-group <%= f.object.errors[:email].any?? "has-error" : "" %>">
+    <%= f.label :email, :class => "control-label" %>
     <%= f.text_field :email, :class => "form-control" %>
+
+    <% if f.object.errors[:email] %>
+      <span class="help-block"><%= safe_join(f.object.errors[:email], "、") %></span>
+    <% end %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :cellphone %>
+  <div class="form-group <%= f.object.errors[:cellphone].any?? "has-error" : "" %>">
+    <%= f.label :cellphone, :class => "control-label" %>
     <%= f.text_field :cellphone, :class => "form-control" %>
+
+    <% if f.object.errors[:cellphone] %>
+      <span class="help-block"><%= safe_join(f.object.errors[:cellphone], "、") %></span>
+    <% end %>
   </div>
 
   <div class="form-group">
