--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -17,4 +17,6 @@
   <dd><%= simple_format @registration.bio %></dd>
 </dl>
 
-<p><%= link_to "Edit", step1_event_registration_path(@event, @registration), :class => "btn btn-primary" %></p>
+<p>
+  <%= link_to "Edit", step1_event_registration_path(@event, @registration), :class => "btn btn-primary" %>
+</p>
