--- a/app/views/registrations/step2.html.erb
+++ b/app/views/registrations/step2.html.erb
@@ -2,34 +2,33 @@
 
 <h2>Step 2</h2>
 
+<% if @registration.errors.any? %>
+  <ul>
+    <% @registration.errors.full_messages.each do |error| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_for @registration, :url => update_step2_event_registration_path(@event, @registration) do |f| %>
 
-  <div class="form-group <%= f.object.errors[:name].any?? "has-error" : "" %>">
+  <div class="form-group">
     <!-- NOTE 出错时，control-label 可以使label文字变红 -->
     <%= f.label :name, :class => "control-label" %>
     <%= f.text_field :name, :class => "form-control", :required => true, :autofocus => true %>
-
-    <% if f.object.errors[:name] %>
-      <span class="help-block"><%= safe_join(f.object.errors[:name], "、") %></span>
-    <% end %>
+    <div class="help-block with-errors"></div>
   </div>
 
-  <div class="form-group <%= f.object.errors[:email].any?? "has-error" : "" %>">
+  <div class="form-group">
     <%= f.label :email, :class => "control-label" %>
     <%= f.email_field :email, :class => "form-control", :required => true %>
-
-    <% if f.object.errors[:email] %>
-      <span class="help-block"><%= safe_join(f.object.errors[:email], "、") %></span>
-    <% end %>
+    <div class="help-block with-errors"></div>
   </div>
 
-  <div class="form-group <%= f.object.errors[:cellphone].any?? "has-error" : "" %>">
+  <div class="form-group">
     <%= f.label :cellphone, :class => "control-label" %>
     <%= f.text_field :cellphone, :class => "form-control", :required => true %>
-
-    <% if f.object.errors[:cellphone] %>
-      <span class="help-block"><%= safe_join(f.object.errors[:cellphone], "、") %></span>
-    <% end %>
+    <div class="help-block with-errors"></div>
   </div>
 
   <div class="form-group">
@@ -38,3 +37,7 @@
   </div>
 
 <% end %>
+
+<script type="text/javascript">
+  $("form").validator();
+</script>
