--- a/app/views/registrations/step3.html.erb
+++ b/app/views/registrations/step3.html.erb
@@ -2,24 +2,27 @@
 
 <h2>Step 3</h2>
 
+<% if @registration.errors.any? %>
+  <ul>
+    <% @registration.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_for @registration, :url => update_step3_event_registration_path(@event, @registration) do |f| %>
 
-  <div class="form-group <%= (f.object.errors[:website].any?)? "has-error" : "" %>">
+  <div class="form-group">
     <%= f.label :website, :class => "control-label"%>
     <%= f.url_field :website, :class => "form-control", :autofocus => true %>
-
-    <% if f.object.errors[:website] %>
-      <span class="help-block"><%= safe_join(f.object.errors[:website], "、") %></span>
-    <% end %>
+    <div class="help-block with-errors"></div>
   </div>
 
-  <div class="form-group <%= (f.object.errors[:bio].any?)? "has-error" : "" %>">
+  <div class="form-group">
     <%= f.label :bio, :class => "control-label" %>
     <%= f.text_area :bio, :class => "form-control", :required => true %>
 
-    <% if f.object.errors[:bio] %>
-      <span class="help-block"><%= safe_join(f.object.errors[:bio], "、") %></span>
-    <% end %>
+    <div class="help-block with-errors"></div>
   </div>
 
   <div class="form-group">
@@ -28,3 +31,7 @@
   </div>
 
 <% end %>
+
+<script type="text/javascript">
+  $("form").validator();
+</script>
