implement admin/event_registrations#CRUD

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -56,7 +56,7 @@
 
     <div class="container" style="padding-top: 60px;">
 
-      <%= render "common/flashed" %>
+      <%= render "common/flashes" %>
 
       <%= yield %>
     </div>
