--- a/app/views/admin/event_registrations/index.html.erb
+++ b/app/views/admin/event_registrations/index.html.erb
@@ -6,22 +6,22 @@
 
 <div class="submenu">
   <div class="btn-group">
-    <%= link_to "全部 (#{@event.registrations.size})", admin_event_registrations_path(registration_filters(:status => nil)),
-                :class => "btn btn-success btn-group #{(params[:status].blank?) ? "active" : ""}" %>
+    <%= link_to "全部 (#{@event.registrations.size})", admin_event_registrations_path(registration_filters( :status => nil )),
+                :class => "btn btn-success #{(params[:status].blank?) ? "active" : ""}" %>
     <% Registration::STATUS.each do |s| %>
       <%= link_to t(s, :scope => "registration.status") + " (#{@event.registrations.by_status(s).size})",
-                  admin_event_registrations_path(registration_filters(:status => s)),
-                  :class => "btn btn-success btn-group #{( params[:status] == s) ? "active" : ""}" %>
+                  admin_event_registrations_path(registration_filters( :status => s )),
+                  :class => "btn btn-success #{( params[:status] == s) ? "active" : ""}" %>
     <% end %>
   </div>
 
   <div class="btn-group">
-    <%= link_to "全部 (#{@event.registrations.size})", admin_event_registrations_path(registration_filters(:ticket_id => nil)),
-                :class => "btn btn-default btn-group #{(params[:ticket_id].blank?) ? "active" : ""}" %>
+    <%= link_to "全部 (#{@event.registrations.size})", admin_event_registrations_path(registration_filters( :ticket_id => nil )),
+                :class => "btn btn-default #{(params[:ticket_id].blank?) ? "active" : ""}" %>
     <% @event.tickets.each do |t| %>
       <%= link_to t.name + " (#{@event.registrations.by_ticket(t).size})",
-                  admin_event_registrations_path(registration_filters(:ticket_id => t.id)),
-                  :class => "btn btn-default btn-group #{(params[:ticket_id].to_i == t.id) ? "active" : ""}" %>
+                  admin_event_registrations_path(registration_filters( :ticket_id => t.id )),
+                  :class => "btn btn-default #{(params[:ticket_id].to_i == t.id) ? "active" : ""}" %>
     <% end %>
   </div>
 </div>
