--- a/app/views/admin/event_registrations/index.html.erb
+++ b/app/views/admin/event_registrations/index.html.erb
@@ -6,6 +6,7 @@
 
 <div class="submenu">
   <div class="btn-group">
+    <%= link_to "Status: ", "#", :class => "btn btn-success disabled" %>
     <%= link_to "全部 (#{@event.registrations.size})", admin_event_registrations_path(registration_filters( :status => nil )),
                 :class => "btn btn-success #{(params[:status].blank?) ? "active" : ""}" %>
     <% Registration::STATUS.each do |s| %>
@@ -16,12 +17,13 @@
   </div>
 
   <div class="btn-group">
+    <%= link_to "Ticket: ", "#", :class => "btn btn-default disabled" %>
     <%= link_to "全部 (#{@event.registrations.size})", admin_event_registrations_path(registration_filters( :ticket_id => nil )),
-                :class => "btn btn-default #{(params[:ticket_id].blank?) ? "active" : ""}" %>
+    :class => "btn btn-default #{(params[:ticket_id].blank?) ? "active" : ""}" %>
     <% @event.tickets.each do |t| %>
-      <%= link_to t.name + " (#{@event.registrations.by_ticket(t).size})",
-                  admin_event_registrations_path(registration_filters( :ticket_id => t.id )),
-                  :class => "btn btn-default #{(params[:ticket_id].to_i == t.id) ? "active" : ""}" %>
+    <%= link_to t.name + " (#{@event.registrations.by_ticket(t).size})",
+    admin_event_registrations_path(registration_filters( :ticket_id => t.id )),
+    :class => "btn btn-default #{(params[:ticket_id].to_i == t.id) ? "active" : ""}" %>
     <% end %>
   </div>
 </div>
