--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,8 +1,33 @@
-<h1><%= t("admin.event_list") %></h1>
+<div>
+  <%= link_to t("admin.new_event"), new_admin_event_path, :class => "btn btn-primary pull-right" %>
 
-<p class="text-right">
-<%= link_to "New Event", new_admin_event_path, :class => "btn btn-primary" %>
-</p>
+  <h1><%= t("admin.event_list") %></h1>
+</div>
+
+<%= form_tag admin_events_path, :method => :get do %>
+  <fieldset style="border: 2px solid #bbb; padding: 10px; margin-bottom: 10px;">
+    <p><% Event::STATUS.each do |s| %>
+      <label>
+        <%= check_box_tag "statuses[]", s, Array(params[:statuses]).include?(s) %> <!-- NOTE: name: statuses[], value: s, checked: judge？ true or false -->
+        <%= t(s, :scope => "event.status") %>
+        (<%= Event.all.by_status(s).size %>)
+      </label>
+      <% end %></p>
+
+      <p><% @categories.each do |c| %>
+        <label>
+          <% if c.events.where( :category_id => c.id ).size != 0 %>
+          <%= check_box_tag "category_ids[]", c.id, Array(params[:category_ids]).include?(c.id.to_s) %> <!-- NOTE: Array() avoid NoMethodError nil.method -->
+          <%= c.name %> (<%= c.events.where( :category_id => c ).size %>)
+          <% end %>
+        </label>
+        <% end %></p>
+
+        <p class="text-right">
+          <%= submit_tag t("admin.submit_filter"), :class => "btn btn-primary" %>
+        </p>
+  </fieldset>
+<% end %>
 
 <%= form_tag bulk_update_admin_events_path, :class => "form-inline" do %>
   <table class="table">
@@ -29,12 +54,18 @@
           <td><%= t(event.status, :scope => "event.status") %></td>
           <td><%= event.category.try(:name) %></td>
           <td>
-            <%= link_to "置顶", reorder_admin_event_path(event, :position => :first), :method => :post, :class => "btn btn-default" %>
-            <%= link_to "置底", reorder_admin_event_path(event, :position => :last), :method => :post, :class => "btn btn-default" %>
-            <%= link_to "Registrations", admin_event_registrations_path(event), :class => "btn btn-default" %>
-            <%= link_to "Tickets", admin_event_tickets_path(event), :class => "btn btn-default" %>
-            <%= link_to "Edit", edit_admin_event_path(event), :class => "btn btn-default" %>
-            <%= link_to "Delete", admin_event_path(event), :method => "delete", :data => { :confirm => "Are you sure?" }, :class => "btn btn-danger" %>
+            <%= link_to  reorder_admin_event_path(event, :position => :first), :method => :post, :class => "btn btn-default" do %>
+              <%= t("admin.top") %>
+              <span class="glyphicon glyphicon-arrow-up"></span>
+            <% end %>
+            <%= link_to reorder_admin_event_path(event, :position => :last), :method => :post, :class => "btn btn-default" do %>
+              <%= t("admin.bottom") %>
+              <span class="glyphicon glyphicon-arrow-down"></span>
+            <% end %>
+            <%= link_to t("admin.registrations"), admin_event_registrations_path(event), :class => "btn btn-default" %>
+            <%= link_to t("admin.tickets"), admin_event_tickets_path(event), :class => "btn btn-default" %>
+            <%= link_to t("admin.edit"), edit_admin_event_path(event), :class => "btn btn-default" %>
+            <%= link_to t("admin.delete"), admin_event_path(event), :method => "delete", :data => { :confirm => "Are you sure?" }, :class => "btn btn-danger" %>
           </td>
               </tr>
       <% end %>
