--- a/app/views/admin/event_registrations/index.html.erb
+++ b/app/views/admin/event_registrations/index.html.erb
@@ -28,7 +28,9 @@
   </div>
 </div>
 
-<%= form_tag admin_event_registrations_path, :method => :get do %>
+<%= form_tag admin_event_registrations_path(@event), :method => :get do %>
+  <p><%= text_field_tag :registration_id, params[:registration_id], :placeholder => "报名编号，可用“,”号区隔", :class => "form-control" %></p>
+
   <p>
     报名日期：<%= date_field_tag :start_on, params[:start_on] %>～<%= date_field_tag :end_on, params[:end_on] %> <!-- NOTE name: :end_on, value: params[:end_on] -->
   </p>
