--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -1,8 +1,14 @@
-<h1><%= @event.name %></h1>
-
-<p>
+<span class="pull-right">
   <%= link_to "打開前台", event_path(@event), :target => "_blank", :class => "btn btn-primary" %>
   <%= link_to "Edit", edit_admin_event_path(@event), :class => "btn btn-primary" %>
-</p>
+</span>
+<div class="clearfix"></div>
+
+<h1 class="text-center">
+  <% if @event.logo.present? %>
+    <%= link_to image_tag(@event.logo.url(:thumb), :class => "thumbnail", :style => "border-radius: 50%; display: inline; margin: auto; height: 60px; width: 60px;"), @event.logo.url, :target => "_blank" %>
+  <% end %>
+  <%= @event.name %>
+</h1>
 
 <%= sanitize @event.description %>
