--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,35 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-datepicker3";
+
+// styles for navbar user logo
+#navbar > ul.nav.navbar-nav.navbar-right {
+  li > a {
+    padding: 0;
+    img {
+      border-radius: 50%;
+      width: 48px;
+      height: 48px;
+    }
+  }
+
+  li > ul {
+    top: 120%;
+    background-image: url('/images/citygirl.jpg');
+    
+    li > a {
+      padding: 3px 20px;
+    }
+  }
+
+  li > ul::before {
+    content: "";
+    border-bottom: 10px solid #333;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    position: absolute;
+    top: -10px;
+    right: 16px;
+    z-index: 10;
+  }
+}
