--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -34,14 +34,16 @@
                   <%= t("hello", :name => current_user.display_name) %>
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                  <li><%= link_to t("navbar.console"), root_path %></li>
+                  <li role="separator" class="divider"></li>
                   <% if I18n.locale == "zh-CN".to_sym %>
                     <li><%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %></li>
                   <% else %>
                     <li><%= link_to "中文", :controller => controller_name, :action => action_name, :locale => "zh-CN" %></li>
                   <% end %>
-                  <li><%= link_to t("navbar.console"), root_path %></li>
                   <li><%= link_to(t("navbar.edit_my_profile"), edit_user_path) %></li>
                   <li><%= link_to(t("navbar.reset_password"), edit_registration_path(:user)) %></li>
+                  <li role="separator" class="divider"></li>
                   <li><%= link_to(t("navbar.sign_out"), destroy_user_session_path, :method => :delete) %></li>
                 </ul>
               </li>
