--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><%= t("navbar.brand") %></a>
+            <span class="<%= ( current_page?(root_path) )? 'selected' : '' %>">
+              <a class="navbar-brand" href="/"><%= t("navbar.brand") %></a>
+            </span>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="<%= ( current_page?(events_path) )? 'active' : '' %>"><%= link_to t("navbar.events"), events_path %></li>
+              <li class="<%= ( current_page?(events_path) )? 'selected' : '' %>"><%= link_to t("navbar.events"), events_path %></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <% if current_user %>
@@ -56,8 +58,8 @@
                   </ul>
                 </li>
               <% else %>
-                <li><%= link_to(t("navbar.sign_up"), new_registration_path(:user)) %></li>
-                <li><%= link_to(t("navbar.sign_in"), new_session_path(:user)) %></li>
+                <li class="<%= ( current_page?(new_user_registration_path) )? 'selected' : '' %>"><%= link_to(t("navbar.sign_up"), new_registration_path(:user)) %></li>
+                <li class="<%= ( current_page?(new_user_session_path) )? 'selected' : '' %>"><%= link_to(t("navbar.sign_in"), new_session_path(:user)) %></li>
               <% end %>
             </ul>
           </div><!--/.nav-collapse -->
