--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -53,11 +53,30 @@
 
   <% if f.object.logo.present? %>
     <p>
-      <label>
-        <%= f.check_box :remove_logo %> 删除图档
+      <label class="label label-danger">
+        <%= f.check_box :remove_logo %> 删除图档 Logo
       </label>
       <%= link_to f.object.logo.filename, f.object.logo.url, :target => "_blank" %>
     </p>
+    <hr>
+  <% end %>
+</div>
+
+<div class="form-group">
+  <p>
+    <%= f.label :images %>             <!-- NOTE file_field -->
+    <%= f.file_field :images, :multiple => true, :class => "form-control" %>
+  </p>
+
+  <% if f.object.images.present? %>
+    <p>
+      <label class="label label-danger">
+        <%= f.check_box :remove_images %> 删除图档 images
+      </label>
+    </p>
+    <% f.object.images.each do |image| %>
+      <%= link_to image.filename, image.url, :target => "_blank" %> <br>
+    <% end %>
   <% end %>
 </div>
 
@@ -65,6 +84,30 @@
   <%= f.label :description %>
   <%= f.cktext_area :description, ckeditor: { uiColor: '#AADC6E', toolbar: 'mini', language: 'zh-CN' } %>
 </div>
+
+<%= f.nested_fields_for :attachments do |ff| %>
+  <fieldset style="border-left: 5px solid #bbb; margin-bottom: 10px; padding: 10px">
+    <legend>Attachment</legend>
+    <div class="form-group">
+      <%= ff.label :attachment %>
+      <%= ff.file_field :attachment, :class => "form-control" %>
+      <% if ff.object.attachment.present? %>
+        已上传档案 <%= link_to ff.object.description, ff.object.attachment.url, :target => "_blank" %>
+      <% end %>
+    </div>
+
+    <div class="form-group">
+      <%= ff.label :description %>
+      <%= ff.text_field :description, :class => "form-control" %>
+    </div>
+
+    <%= ff.remove_nested_fields_link "移除这个档案", :class => "btn btn-danger" %>
+  </fieldset>
+<% end %>
+
+<p class="text-right">
+  <%= f.add_nested_fields_link :attachments, "新增档案", :class => "btn btn-default" %>
+</p>
 
 <%= f.nested_fields_for :tickets do |ff| %>
   <fieldset style="border-left: 5px solid #bbb; margin-bottom: 10px; padding: 10px;">
@@ -103,5 +146,14 @@
     size: "sm",
     iconName: "glyphicon glyphicon-picture"
   });
+
+  // js for event images upload button
+  $("#event_images").filestyle({
+    input: false,
+    buttonText: "上传活动图片images",
+    buttonName: "btn-primary",
+    size: "ls",
+    iconName: "glyphicon glyphicon-picture"
+  })
 
 </script>
