--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -4,10 +4,10 @@
 @import "select2-bootstrap";
 @import "bootstrap-datepicker3";
 @import "jquery-ui";
-
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-datepicker3";
+@import "event";  // file for Event model
 
 // website common styles
 body {
