--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -5,7 +5,7 @@
   <%= render :partial => "form", :locals => { :f => f } %>
 
   <div class="form-group">
-    <%= f.submit "Create", :class => "btn btn-primary" %>
+    <%= f.submit "Create Event", :class => "btn btn-primary" %>
     <%= link_to "Cancel", admin_events_path %>
   </div>
 <% end %>
