--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -1,5 +1,5 @@
 <span class="pull-right">
-  <%= link_to "打開前台", event_path(@event), :target => "_blank", :class => "btn btn-primary" %>
+  <%= link_to "打开前台", event_path(@event), :target => "_blank", :class => "btn btn-primary" %>
   <%= link_to "Edit", edit_admin_event_path(@event), :class => "btn btn-primary" %>
 </span>
 <div class="clearfix"></div>
