make footer  stay on bottom

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -8,6 +8,7 @@
 @import "bootstrap";
 @import "bootstrap-datepicker3";
 @import "event";  // file for Event model
+@import "common";
 
 // website common styles
 body {
