--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -52,6 +52,8 @@
 <hr>
 <p><%= link_to "开始报名", new_event_registration_path(@event), :class => "btn btn-primary" %></p>
 
+<!-- Event Comment Section -->
+<h1 class="text-center">Event Comment</h1>
 
 <script>
 // js for Event images
