--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,7 +31,7 @@
           <h4 class="modal-title" style="display: block;"><%= @event.name %></h4>
         </div>
         <div class="modal-body">
-          <image id="img-modal" class="image-response" src="" style="width: 100%;" />
+          <image id="img-modal" class="image-response" src=""/>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
