--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,3 +1,39 @@
+// small image
+.img-sm {
+  border-radius: 15%;
+  width: 28px;
+  height: 28px;
+  margin: 0px 0;
+}
+
+// style for bootstrap modal userd for showing big image
+// styles for Event images model
+// style for admin/users/index user logo
+  .img-toggle{
+    display: inline;
+    margin: .5em .6em .5em 0;
+    cursor: pointer;
+  }
+
+  .img-toggle:hover {
+    box-shadow: 0px 0px 1px 1px #0288D1 ;
+  }
+
+  #img-modal {
+    max-width: 100%;
+    max-height: 300px;
+    // center img
+    margin: 0 auto;
+    display: block;
+  }
+
+  @media (min-width: 768px) {
+    .modal-dialog {
+      max-width: 1200px;
+      width: 600px;
+      height: 400px;
+    }
+  }
 
 // start of styles for footer to bottom
 html,
