--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,6 +16,7 @@
 <table class="table">
   <tr>
     <th>ID</th>
+    <th>User Logo</th>
     <th>Email</th>
     <th>Groups</th>
     <th>Actions</th>
@@ -23,6 +24,16 @@
   <% @users.each do |user| %>
   <tr>
     <td><%= user.id %></td>
+    <td>
+      <!-- Trigger the modal with a button -->
+      <span href="" data-toggle="modal" data-target="#myModal">
+        <% if user.logo.present? %>
+          <%= image_tag(user.logo.url, :class => "img-toggle thumbnail img-sm") %>
+        <% else %>
+          <img src="<%= image_url 'default_user_logo.png' %>" alt="user logo" class="img-toggle thumbnail img-sm", style="display: inline; cursor: pointer;">
+        <% end %>
+      </span>
+    </td>
     <td><%= user.email %></td>
     <td>
       <% user.groups.each do |g| %>
@@ -35,4 +46,38 @@
     </td>
   </tr>
   <% end %>
+
+  <!-- Modal -->
+  <div id="myModal" class="modal fade event-images" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header text-center">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title" style="display: block;">User Logo</h4>
+        </div>
+        <div class="modal-body">
+          <image id="img-modal" src=""/>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 </table>
+
+<script>
+// js for user logo
+$(document).on("turbolinks:load", function () {
+    $(".img-toggle").on('click', function () {
+        var image = $(this).attr('src');
+        $('#myModal').on('show.bs.modal', function () {
+            $("#img-modal").attr("src", image);
+        });
+    });
+});
+</script>
