--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,72 +10,18 @@
 
   <body>
     <div id="wrapper">
-        <div id="header">
-          <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <span class="<%= ( current_page?(admin_root_path) )? 'selected' : '' %>" >
-                  <a class="navbar-brand" href="/admin/"><%= t("admin.navbar.brand") %></a>
-                </span>
-              </div>
-              <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                  <li class="<%= ( current_page?(admin_events_path) )? 'selected' : '' %>"><%= link_to(t("admin.navbar.events"), admin_events_path) %></li>
-                  <li class="<%= ( current_page?(admin_users_path) )? 'selected' : '' %>"><%= link_to(t("admin.navbar.users"), admin_users_path) %></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  <li><%= link_to t("navbar.console"), root_path %></li>
-                  <% if current_user %>
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <% if current_user.logo.present? %>
-                          <%= image_tag(current_user.logo.url(:thumb)) %>
-                          <%= current_user.display_name %>
-                        <% else %>
-                          <span class="glyphicon glyphicon-user"></span>
-                          <%= t("hello", :name => current_user.display_name) %>
-                        <% end %>
-                        <span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        <li><%= link_to t("navbar.console"), root_path %></li>
-                        <li role="separator" class="divider"></li>
-                        <% if I18n.locale == "zh-CN".to_sym %>
-                          <li><%= link_to "English", :controller => controller_name, :action => action_name, :locale => "en" %></li>
-                        <% else %>
-                          <li><%= link_to "中文", :controller => controller_name, :action => action_name, :locale => "zh-CN" %></li>
-                        <% end %>
-                        <li><%= link_to(t("navbar.edit_my_profile"), edit_user_path) %></li>
-                        <li><%= link_to(t("navbar.reset_password"), edit_registration_path(:user)) %></li>
-                        <li role="separator" class="divider"></li>
-                        <li><%= link_to(t("navbar.sign_out"), destroy_user_session_path, :method => :delete) %></li>
-                      </ul>
-                    </li>
-                  <% else %>
-                    <li ><%= link_to(t("navbar.sign_up"), new_registration_path(:user)) %></li>
-                    <li><%= link_to(t("navbar.sign_in"), new_session_path(:user)) %></li>
-                  <% end %>
-                </ul>
-              </div><!--/.nav-collapse -->
-            </div>
-          </nav>
-        </div>
+      <div id="header">
+        <%= render "common/admin_navbar" %>
+      </div>
 
-        <div id="content" class="container" style="padding-top: 60px;">
+      <div id="content" class="container" style="padding-top: 60px;">
+        <%= render "common/flashes" %>
+        <%= yield %>
+      </div>
 
-          <%= render "common/flashes" %>
-
-          <%= yield %>
-        </div>
-
-        <div id="footer">
-          <%= render "common/footer" %>
-        </div>
+      <div id="footer">
+        <%= render "common/footer" %>
+      </div>
     </div>
   </body>
 </html>
